Fix shadow on periodic-table The box-shadow on the periodic-table was cut off on right side. This was fixed, but created a new problem, preventing the scrollbars from having rounded corners. To fix, this, separate CSS styles were used for info-side (where the scrollbars would never appear), and info-top (where the scrollbars might appear).

--- a/frontend/src/components/PeriodicTable/_periodic-table-theme.scss
+++ b/frontend/src/components/PeriodicTable/_periodic-table-theme.scss
@@ -6,10 +6,14 @@
 // Purpose: To color the colors behind all the elements (periodic table)
 @mixin periodicTableThemeDefault($background, $hasShadow, $shadow, $shadowHover) {
   // Add shadow to grid container
-  @include shadow('#grid-container-outer', $hasShadow, $shadow, $shadowHover);
+  @include shadow('#grid-container', $hasShadow, $shadow, $shadowHover);
 
-  #grid-container-outer {
+  #grid-container {
     background-color: $background;
+  }
+
+  .info-top {
+    @include shadow('#grid-container-outer', $hasShadow, $shadow, $shadowHover);
   }
 }
 
